--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <title>I'm a sexy boy</title>
 </head>
 <body>
-    <div id="login-form">
-    <input type="text" placeholder="What is your name?"/>
+    <form class="hidden" id="login-form">
+    <input 
+    required
+    maxlength="15"
+    type="text" 
+    placeholder="What is your name?"/>
     <button>Log In</button>
-    <script src="app.js"> </script>
-    </div>
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
+    <script src="4.6LoadingUsername.js"> </script>
 </body>
 </html> 
 
@@ -21,4 +26,27 @@
     2. 태그 Input= "데이터 입력 창" type = 종류
     3. 속성 placebholder ="사용자가 적절한 내용을 입력할수 있도록 도와주는 도움말"
     4. 분류를 위해 div 만들고 Id or Class 생성
+    5. 브라우저의 Validation(인증) 기능을 사용하려면 div가 아닌 form 형식
+    6. html은 기본적으로 Input안에 validation(검즘)해주는 기능을 포함시킬수 있다
+    7. Form형식은 default로 click 혹은 enter를 누르면 submit(제출)한다 
+    8. form -> input ->button or submit a value = 자동 제출(submit)
+    9. </a>태크는 </form> 과 </script> 사이에 넣기 
+    9. <script src=".js"> </script> 는 꼭 </body> 안쪽 끝에 위치. 다른 태그를 감싸야 한다
+--> 
+
+<!--
+    4.4 Getting Username 
+    1. 사용자의 login-input 저장 공간 만들기 
+    - <h1 class="hidden"> </h1>
+    - </a>태크는 </form> 과 </script> 사이 
+    2. Form을 숨기고 h1을 보여주는 과정
+    - (조건) h1에 텍스트를 넣은 후
+--> 
+
+<!--
+    4.6 Loading Username 
+    1. class="hidden"을 form 에도 추가 
+    - why? 
+    - (1)default으로 form이 표시되기때문 (제거 목적)
+    - (2)우리가 무엇을 표시할지 JS에서 선택할 수 있기 때문 
 -->
