--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="CSS/style.css"/>
     <title>I'm a sexy boy</title>
 </head>
 <body>
@@ -12,12 +12,19 @@
     <input 
     required
     maxlength="15"
-    type="text" 
+    type="text"  
     placeholder="What is your name?"/>
     <button>Log In</button>
     </form>
+    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="4.6LoadingUsername.js"> </script>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="js/4LOGIN/4.6LoadingUsername.js"></script>
+    <script src="js/5Clock/5.Clock.js"></script>
+    <script src="js/6Quotes/quotes.js"></script>
 </body>
 </html> 
 
