--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="js/5Clock/5.Clock.js"></script>
     <script src="js/6Quotes/6quotes.js"></script>
     <script src="js/6Quotes/6Background.js"></script>
-    <script src="js/7Todolist/7.5Loading.js"></script>
+    <script src="js/7Todolist/7.7Final.js"></script>
 </body>
 </html> 
 
