--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
         <span></span>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>   
+    </div>
     <script src="js/4LOGIN/4.6LoadingUsername.js"></script>
     <script src="js/5Clock/5.Clock.js"></script>
     <script src="js/6Quotes/6quotes.js"></script>
     <script src="js/6Quotes/6Background.js"></script>
     <script src="js/7Todolist/7.7Final.js"></script>
+    <script src="js/8Weather/8.0Geolocation.js"></script>
 </body>
 </html> 
 
